2.1. FileInputStream [#4898]